--- a/portfolio_frontend/src/Components/Navbar/Navbar.css
+++ b/portfolio_frontend/src/Components/Navbar/Navbar.css
@@ -21,12 +21,13 @@
     font-size: 18px;
 }
 .nav-connect{
-    border:1px solid black;
+    /* border:1px solid black; */
     padding:8px 16px;
     border-radius:50px;
     background: radial-gradient(circle,rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
     cursor: pointer;
     transition: transform 0.5s ease;
+    outline: none;
 }
 .nav-connect:hover{
     transform:scale(1.1);
