--- a/portfolio_frontend/src/Components/Contact/Contact.css
+++ b/portfolio_frontend/src/Components/Contact/Contact.css
@@ -6,7 +6,7 @@
     gap: 80px;
     margin: 18px 160px;
 }
-.contact_title h1{
+.contact-title h1{
      padding: 0px 30px;
     font-size: 50px;
     font-weight: 600;
@@ -94,3 +94,52 @@
     background-color: black;
     color:white;
 }
+
+
+
+@media(max-width:768px){
+  .contact{
+    gap: 80px;
+    margin: 50px 70px;
+    align-items: start;
+  }
+  .contact-title h1 {
+    font-size: 30px;
+    padding: 0;
+  }
+  .contact-section{
+    flex-direction: column;
+
+  }
+  .contact-left h1{
+    font-size: 35px;
+  }
+  .contact-left p{
+    font-size: 20px;
+  }
+  .contact-detail{
+    gap: 20px;
+  }
+  .contact-detail img{
+    width: 22px;
+  }
+  .contact-detail p{
+    font-size: 16px;
+  }
+  .contact-right label{
+    font-size: 18px;
+  }
+  .contact-right input{
+    width: 100%;
+    font-size: 16px;
+  }
+  .contact-right textarea{
+    width: 95%;
+    font-size: 16px;
+  }
+  .contact-submit{
+    font-size: 15px;
+    padding: 10px 25px;
+  }
+}
+
