--- a/portfolio_frontend/src/Components/Navbar/Navbar.css
+++ b/portfolio_frontend/src/Components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
     margin: 18px 160px;
     border-bottom: 1px solid black;
 }
-.nav_logo{
+.nav-logo{
     margin-bottom:3px;
     height: 50px;
     width: 50px;
@@ -32,3 +32,77 @@
 .nav-connect:hover{
     transform:scale(1.1);
 }
+.nav-close{
+    display: none;
+}
+.nav-open{
+    display: none;
+}
+@media(max-width:768px){
+    .navbar{
+        margin: 20px 50px;
+    }
+    .nav-connect{
+        display: none;
+    }
+    .nav-open{
+        display: block;
+        position: fixed;
+        right: 30px;
+        width: 20px;
+        /* background-color: black; */
+        cursor: pointer;
+    }
+    .nav-close{
+        display: block;
+        position: relative;
+        top: 25px;
+        left: 160px;
+        width: 20px;
+        /* background-color:green; */
+        cursor: pointer;
+    }
+    .nav-menu{
+        position: fixed;
+        flex-direction: column;
+        align-items:start;
+        top: 0;
+        gap: 30px;
+        width: 200px;
+        height: 100%;
+        z-index: 2;
+        background-color: #1f0016;
+        transition: right 0.5s;
+        color: white;
+        right: -350px;
+    }
+    .nav-menu li{
+        font-size: 20px;
+        padding-left: 60px;
+        flex-direction: row;
+        gap: 20px;
+    }
+}
+/* <480 */
+@media (max-width: 480px) {
+  .nav-menu {
+    width: 220px;
+    padding: 70px 20px;
+  }
+
+  .nav-menu li a {
+    font-size: 16px;
+  }
+}
+
+/* 769-1024 */
+@media (max-width: 1024px) {
+  .navbar {
+    padding: 20px 40px;
+  }
+
+  .nav-menu {
+    gap: 22px;
+  }
+}
+
