--- a/portfolio_frontend/src/Components/Projects/Projects.css
+++ b/portfolio_frontend/src/Components/Projects/Projects.css
@@ -47,3 +47,32 @@
     gap:20px ;
     outline: none;
 }
+
+@media(max-width:768px){
+    .project{
+        gap: 50px;
+        align-items: start;
+        margin: 50px 70px;
+    }
+    .project-title h1{
+        padding: 0;
+        font-size: 30px;
+        /* font-weight: 600; */
+    }
+    .project-container{
+        grid-template-columns: 1fr 1fr;
+        gap: 30px;
+
+    }
+    .project-container img{
+        width: 100%;
+        height: 100%;
+    }
+    .project-showmore{
+        padding:10px 30px;
+        font-size: 14px;
+        margin: 50px auto;
+        cursor: pointer;
+    }
+}
+
