--- a/portfolio_frontend/src/Components/Services/Services.css
+++ b/portfolio_frontend/src/Components/Services/Services.css
@@ -62,3 +62,33 @@
     transform: scale(1.05);
     transition: 0.4s;
 }
+@media(max-width:768px){
+    .services{
+        align-items: start;
+        gap: 70px;
+        margin: 20px 70px
+    }
+    .services-title h1{
+        padding: 0;
+        font-size: 30px;
+    }
+    .services-format{
+        gap: 10px;
+        padding: 32px;
+    }
+    .services-format h2{
+        font-size: 22px;
+    }
+    .services-format p{
+        font-size: 16px;
+        line-height: 32px;
+        max-width: 200px;
+    }
+    .services-readmore img{
+        width: 20px;
+    }
+    .services-content{
+        grid-template-columns: 1fr 1fr;
+        gap: 15px;
+    }
+}
